--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <link href="E:\B.Tech\Web Technology\Full Web Technology\Practice\Practice2\Configuration.css" rel="stylesheet">
     <script src="E:\B.Tech\Web Technology\Full Web Technology\Practice\Practice2\config.js" defer></script>
     <script src="E:\B.Tech\Web Technology\Full Web Technology\Practice\Practice2\game.js" defer></script>
-    <script src="E:\B.Tech\Web Technology\Full Web Technology\Practice\Practice2\app.js" defer></script>
+    <script src="E:\B.Tech\Web Technology\Full Web Technology\Practice\Practice2\index.js" defer></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Kanit&family=Open+Sans:wght@400;700&family=Roboto+Condensed:ital,wght@1,700&display=swap" rel="stylesheet">
